finish section 4 call to action, fix sign-up button alignment

--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,12 @@ p {
 
 .left {
   display: flex;
+  flex-shrink: 0;
   flex-direction: column;
   margin-top: 10px;
   margin-left: 200px;
-  margin-right: 40px;
-  width: 35%;
+  margin-right: 60px;
+  width: 30%;
 }
 
 .right {
@@ -60,13 +61,14 @@ p {
 }
 
 .introduction {
-  margin-top: 120px;
+  margin-top: 100px;
   margin-bottom: 100px;
 }
 
 #img1 {
-  margin-top: 20px;
-  object-fit: contain;
+  margin-top: 75px;
+  height: 350px;
+  width: 650px;
   border-radius: 25px;
 }
 
@@ -139,4 +141,59 @@ p {
   font-weight: bold;
   margin: 0;
   padding-right: 75px;
+}
+
+.section4 {
+  background-color: #F9FAF8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.call-to-action {
+  display: flex;
+  width: 1000px;
+  background-color: lightblue;
+  border: 5px solid turquoise;
+  border-radius: 25px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 25px;
+  padding-bottom: 25px;  
+}
+
+.call-left {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+.call-right {
+  display: flex;
+  align-items: center;
+}
+
+#call-title {
+  font-size: 22px;
+  margin: 0;
+  font-weight: bold;
+}
+
+#call-text {
+  margin: 0;
+}
+
+#sign-up-button {
+  font-size: 16px;
+  flex-shrink: 0;
+  background-color: lightblue;
+  border: 3px solid white;
+  border-radius: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: 100px;
 }
